--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<script>
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('/sw.js')
+		}
+	</script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
